# PowerForecastMLOps

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: data.yaml
src/power_forecast/: cli.py
src/power_forecast/data/: eia.py  manifest.py  validate.py  weather.py  weather_forecast.py
src/power_forecast/features/: build_features.py  future_features.py
src/power_forecast/models/: backtest.py  esn.py  forecast.py  metrics.py  model_zoo.py  predict.py  train_compare.py  train_lightgbm.py
src/power_forecast/monitoring/: report.py
src/power_forecast/pipelines/: backtest_pipeline.py  feature_pipeline.py  forecast_pipeline.py  ingest_pipeline.py  monitor_pipeline.py  predict_pipeline.py  train_pipeline.py  validation_pipeline.py
src/power_forecast/utils/: config.py  env.py
tests/: test_env.py  test_esn.py  test_features.py  test_model_zoo.py  test_monitoring.py  test_predict.py  test_train_lightgbm.py  test_validation.py
