[project]
name = "power-forecast-mlops"
version = "0.1.0"
description = "Live ML forecasting platform for electricity demand using EIA and Open-Meteo data."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Felix Sebastian Köster" }
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "pytest>=8.3",
    "ruff>=0.6"
]

[project.scripts]
power-forecast = "power_forecast.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
